Change revenu word to income

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -72,7 +72,7 @@
     },
     "Update team": "Update team",
     "Team Apis": "Team Apis",
-    "Team Revenus": "Team Revenus",
+    "Team Income": "Team Income",
     "Team api keys": "Team api keys",
     "Team billing": "Team billing",
     "Team members": "Team members",
