--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -72,7 +72,7 @@
   },
   "Update team": "Mettre à jour l'équipe",
   "Team Apis": "Apis",
-  "Team Revenus": "Revenus",
+  "Team Income": "Revenus",
   "Team api keys": "Clé d'api",
   "Team billing": "Facturation",
   "Team members": "Membres",
