fix typographical error

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -437,7 +437,7 @@
     "The apikey client id": "The apikey client id",
     "Auth. type": "Auth. type",
     "otoroshi.test.key.generator.button": "Generate a dedicated testing key in Otoroshi",
-    "otoroshi.test.key.modal.description": "In order to make everything work, you'll have to add a tags match (OneTageIn / AllTagIn) in your service descriptor in the \"Api Keys Constraints\" section. Make sure this service descriptor is the right one for testing and not a production system.",
+    "otoroshi.test.key.modal.description": "In order to make everything work, you'll have to add a tags match (OneTagIn / AllTagIn) in your service descriptor in the \"Api Keys Constraints\" section. Make sure this service descriptor is the right one for testing and not a production system.",
     "otoroshi.test.key.modal.tag.name": "The tag you need to add is the following",
     "otoroshi.test.key.modal.apikey.name": "the name of the apikey will be",
     "Generate": "Generate",
