--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -511,5 +511,6 @@
   "Forgot your password ?": "Mot de passe oublié ?",
   "Api saved": "Api sauvegardée",
   "api.created.success": "Api %s créée",
-  "oops, something went wrong.": "oups, quelque chose s'est mal passé."
+  "oops, something went wrong.": "oups, quelque chose s'est mal passé.",
+  "peronal.token.empty.error": "Votre jeton perso. ne peut être vide"
 }
