fix some translations

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -225,7 +225,7 @@
     "CSS color theme": "CSS color theme",
     "Javascript": "Javascript",
     "Js URL": "Js URL",
-    "CSS URRL": "CSS URL",
+    "CSS URL": "CSS URL",
     "Favicon URL": "Favicon URL",
     "Authentication type": "Authentication type",
     "Settings": "Settings",
