fix some translations

--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -77,7 +77,7 @@
   "Team billing": "Facturation",
   "Team members": "Membres",
   "Team assets": "Assets",
-  "Type the password": "Tappez votre mots de passe",
+  "Type the password": "Saisir votre mot de passe",
   "Re-type the password": "Confirmez votre mot de passe",
   "Change my password": "Modifier mon mot de passe",
   "Reload personal token": "Recharger mon jeton perso.",
@@ -192,11 +192,11 @@
   "Unsupported auth. type": "Type d'auth. non supporté",
   "Select an asset": "Sélectionner un asset",
   "Find an assets": "Trouver un asset",
-  "Select": "Selectionner",
-  "Close": "fermer",
+  "Select": "Sélectionner",
+  "Close": "Fermer",
   "loading": "Chargement...",
   "No assets found": "Aucun assets trouvés",
-  "Set tenant logo from asset": "Définir le logo du tenant dpuis un asset",
+  "Set tenant logo from asset": "Définir le logo du tenant depuis un asset",
   "Set js from asset": "Définir le js depuis un asset",
   "Set css from asset": "Définir le css depuis un asset",
   "Set favicon from asset": "Définir le favicon depuis un asset",
@@ -225,16 +225,16 @@
   "CSS color theme": "Thème de couleurs CSS",
   "Javascript": "Javascript",
   "Js URL": "Js URL",
-  "CSS URRL": "CSS URL",
+  "CSS URL": "CSS URL",
   "Favicon URL": "Favicon URL",
-  "Authentication type": "Type d'authentication",
+  "Authentication type": "Type d'authentification",
   "Settings": "Paramètres",
   "Mailer type": "Type de mailer",
   "Mailer": "Mailer",
   "Header name": "Nom du header",
   "Header value": "Valeur du header",
   "Alert emails": "Courriel d'alerte",
-  "Email address to receive alerts": "Adresse de courriel de eception d'alerte",
+  "Email address to receive alerts": "Adresse de courriel de réception d'alerte",
   "Alert.email.help": "Chaque adresse de courriel sera notifiée avec un résumé des alertes Otoroshi",
   "Kafka Servers": "Serveur Kafka",
   "kafka.servers.help": "La liste des serveurs à contacter pour connecter le client Kafka au cluster Kafka",
@@ -250,9 +250,9 @@
   "kafka.audit.topic.help": "Le topic sur lequel les audits Otoroshi seront envoyés",
   "Bucket name": "Nom du bucket",
   "The name of the S3 bucket": "Le nom du bucket S3",
-  "Bucket url": "UL du bucket",
+  "Bucket url": "URL du bucket",
   "The url of the bucket": "L'url du bucket",
-  "S3 region": "égion du S3",
+  "S3 region": "Région du S3",
   "The region of the bucket": "La région du bucket",
   "Bucket access key": "Bucket access key",
   "The access key to access bucket": "La clé d'accès du bucket",
@@ -279,7 +279,7 @@
   "Users search base": "Base de recherche utilisateurs",
   "Group filter": "Filtre de groupe",
   "Admins. group filter": "Filtre de groupe Admin.",
-  "Search filter": "Fltre de recherche",
+  "Search filter": "Filtre de recherche",
   "Admin username (bind DN)": "Nom d'utilisateur admin (bind DN)",
   "Admin password": "Mot de passe admin",
   "Name field name": "Champ nom",
@@ -287,7 +287,7 @@
   "URL of the OIDC config": "URL de config. OIDC",
   "Get from OIDC config 2": "Récuperer depuis OIDC config 2",
   "Use JSON payloads": "Utiliser un payloads JSON",
-  "Read profile from JWT token": "Lire le profile depuis un token JWT",
+  "Read profile from JWT token": "Lire le profil depuis un token JWT",
   "Token scope": "Scope token",
   "Client Id": "Id client",
   "Client secret": "Secret client",
@@ -336,8 +336,8 @@
   "Impersonator": "Impersonator",
   "Created at": "Créé le",
   "Expires": "Expiration",
-  "destroy.session.confirm": "Êtes-vous sûr de vouloir détruire cette session?",
-  "destroy.all.sessions.confirm": "Êtes-vous sûr de vouloir détruire toutes les sessions, y compris la vôtre?",
+  "destroy.session.confirm": "Êtes-vous sûr de vouloir détruire cette session ?",
+  "destroy.all.sessions.confirm": "Êtes-vous sûr de vouloir détruire toutes les sessions, y compris la votre ?",
   "Delete all sessions": "Supprimer toutes les sessions",
   "Reload the table content": "Recharger le contenu du tableau",
   "importing ...": "import ...",
@@ -355,14 +355,14 @@
   "Otoroshi": "Otoroshi",
   "Sawgger": "Swagger",
   "Testing": "Test",
-  "Small desc.": "desc. courte",
+  "Small desc.": "Desc. courte",
   "Current version": "Version courante",
   "Testable": "Testable",
   "Categories": "Categories",
   "Subscription": "Souscription",
   "Authorized teams": "Équipes authorizées",
   "Versions and tags": "Versions et tags",
-  "Visibility and subscription": "Visibilité and souscription",
+  "Visibility and subscription": "Visibilité et souscription",
   "Authorizations": "Autorisations",
   "api.already.exists": "Une api avec le nom \"%s\" existe déjà",
   "Add header": "Titre",
@@ -385,7 +385,7 @@
   "Long Lorem Ipsum": "Long Lorem Ipsum",
   "Write": "Écrire",
   "Preview": "Aperçu",
-  "Set from asset": "définir depuis un asset",
+  "Set from asset": "Définir depuis un asset",
   "Otoroshi instance": {
     "s": "Instance Otoroshi",
     "p": "Instances Otoroshi"
@@ -411,22 +411,22 @@
   "Trial": "Essai",
   "Allow multiple apiKey demands": "Autoriser plusieurs demandes apiKey",
   "Max. per second": "Max. par seconde",
-  "Max. requests per second": "Max. requetes apr seconde",
+  "Max. requests per second": "Max. requêtes apr seconde",
   "Max. per day": "Max. par jour",
-  "Max. requests per day": "Max. requetes par jour",
+  "Max. requests per day": "Max. requêtes par jour",
   "Max. per month": "Max. par mois",
-  "Max. requests per month": "Max. requetes par mois",
-  "Plan description": "description du plan",
+  "Max. requests per month": "Max. requêtes par mois",
+  "Plan description": "Description du plan",
   "Trial period": "Période d'essai",
-  "The trial period": "La Période d'essai",
-  "Trial period unit": "unité de période d'essai",
-  "Currency": "devise",
-  "Cost per month": "coût par mois",
+  "The trial period": "La période d'essai",
+  "Trial period unit": "Unité de période d'essai",
+  "Currency": "Devise",
+  "Cost per month": "Coût par mois",
   "Cost per add. req.": "Coût par req. add.",
   "Cost per additionnal request": "Coût par requête additionnelle",
   "Cost per req.": "Coût par req.",
   "Cost per request": "Coût par requête",
-  "delete.plan.confirm": "Êtes-vous certain de vouloir supprimer ce plan?",
+  "delete.plan.confirm": "Êtes-vous certain de vouloir supprimer ce plan ?",
   "add a new plan": "Ajouter un nouveau plan",
   "Make default plan": "Plan par défault",
   "Delete plan": "Supprimer le plan",
@@ -439,10 +439,10 @@
   "otoroshi.test.key.generator.button": "Générer une clé de test dédiée dans Otoroshi",
   "otoroshi.test.key.modal.description": "Pour que tout fonctionne correctement, vous devez ajouter une correspondance de balises (OneTagIn / AllTagIn) dans votre descripteur de service dans la section \"Contraintes des clés Api\". Assurez-vous que ce descripteur de service est le bon pour les tests et non un système de production.",
   "otoroshi.test.key.modal.tag.name": "La balise que vous devez ajouter est la suivante",
-  "otoroshi.test.key.modal.apikey.name": "Le nom de le clé d'api",
+  "otoroshi.test.key.modal.apikey.name": "Le nom de la clé d'api",
   "Generate": "Générer",
   "Generate an apikey for testing": "Générer une clé d'api pour les tests",
-  "Remote content": "Contenu a distance",
+  "Remote content": "Contenu à distance",
   "Page title": "Titre de la page",
   "Page level": "Niveau de la page",
   "Content type": "Type de contenu",
@@ -511,6 +511,6 @@
   "Forgot your password ?": "Mot de passe oublié ?",
   "Api saved": "Api sauvegardée",
   "api.created.success": "Api %s créée",
-  "oops, something went wrong.": "oups, quelque chose s'est mal passé.",
+  "oops, something went wrong.": "Oups, quelque chose s'est mal passé.",
   "peronal.token.empty.error": "Votre jeton perso. ne peut être vide"
 }
