--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -513,5 +513,6 @@
   "api.created.success": "Api %s créée",
   "oops, something went wrong.": "oups, quelque chose s'est mal passé.",
   "personal.token.empty.error": "Votre jeton perso. ne peut être vide",
-  "remove.user.success": "l'utilisateur %s à été correctement supprimé"
+  "remove.user.success": "l'utilisateur %s à été correctement supprimé",
+  "email.validity.error": "Vous avez fournis une adresse courriel invalide"
 }
