--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -429,6 +429,8 @@
     "delete.plan.confirm": "Are you sure you want to delete this plan ?",
     "add a new plan": "add a new plan",
     "Make default plan": "Make default plan",
+    "Make it private": "Make it private",
+    "Make it public": "Make it public",
     "Delete plan": "Delete plan",
     "Headers": "Headers",
     "Use swagger content": "Use swagger content",
