--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -4,7 +4,7 @@
   "moment.date.format.short": "DD/MM/YYYY",
   "your teams": "Vos équipes",
   "find team": "Trouver une équipe",
-  "My profile": "Mon profile",
+  "My profile": "Mon profil",
   "Teams": "Équipes",
   "Tenants": "Tenants",
   "Tenant": {
@@ -21,7 +21,7 @@
   "Logged in as": "Connecté en tant que",
   "All teams": "Toutes les équipes",
   "All organizations": "Toutes les organisations",
-  "settings": "Paramètres",
+  "settings": "paramètres",
   "reset": "Réinitialiser",
   "Logout": "Déconnexion",
   "Your APIs center": "Votre catalogue d'APIs",
@@ -41,7 +41,7 @@
   "Search a team": "Rechercher une équipe",
   "Join": "Rejoindre",
   "Pending request": "En cours",
-  "Access": "Acces",
+  "Access": "Accès",
   "Search an organization": "Rechercher une organisation",
   "Notifications": {
     "s": "Notification",
@@ -99,7 +99,7 @@
   "All notifications": "Toutes les notifications",
   "no notification": "Vous avez 0 notification",
   "more": "plus",
-  "Ask access to API": "Demande d'acces à une api",
+  "Ask access to API": "Demande d'accès à une api",
   "Ask to join a team": "Demande d'adhésion à une équipe",
   "Subscription to an API": "Souscription à une API",
   "Otoroshi sync error": "Erreur synchro Otoroshi",
@@ -111,7 +111,7 @@
   "notif.api.access": "demande d'accès à %s",
   "notif.membership.team": "Demande d'adhésion a votre équipe",
   "notif.apikey.deletion": "Voter cléd'api avec l'identifiant client %s pour api %s a été supprimée",
-  "api.access.request": "Vous aller envoyer une demande d'acces à l'api %s. Pour quelle.s équipes.s voulez-vous envoyer cette demande ?",
+  "api.access.request": "Vous aller envoyer une demande d'accès à l'api %s. Pour quelle équipe voulez-vous envoyer cette demande ?",
   "FreeWithoutQuotas": "Gratuit sans quotas",
   "FFreeWithQuotas": "Gratuit avec quotas",
   "QuotasWithLimits": "Juste Quotas",
@@ -134,7 +134,7 @@
   "Supported versions": "Versions supportées",
   "Tags": "Tags",
   "Visibility": "Visibilité",
-  "Default pricing": "Tarification par défault",
+  "Default pricing": "Tarification par défaut",
   "Last modification": "Dernière modification",
   "View your api keys": "Voir vos clés d'api",
   "Request in progress": "Request in progress",
@@ -174,7 +174,7 @@
   "Actions": "Actions",
   "delete asset": "Etes-vous certain de vouloir supprimer cet asset ?",
   "upload error": "Error téléchargement",
-  "upload.error.message": "Vous devez fournir au moins un titre et un nom de fichier pour un fichier.",
+  "upload.error.message": "Vous devez fournir au moins un titre et un nom de fichier.",
   "no file found": "Aucun fichier trouvé",
   "asset": {
     "s": "asset",
@@ -218,7 +218,7 @@
   "Id": "Id",
   "Enabled": "Activé",
   "Domain name": "Nom de domaine",
-  "Default  language": "Langue par défault",
+  "Default  language": "Langue par défaut",
   "Unlogged description": "Description en mode déconnecté",
   "Logo": "Logo",
   "CSS": "CSS",
@@ -257,7 +257,7 @@
   "Bucket access key": "Bucket access key",
   "The access key to access bucket": "La clé d'accès du bucket",
   "Bucket secret": "Bucket secret",
-  "The secret to access the bucket": "Le secret d'accès access du bucket",
+  "The secret to access the bucket": "Le secret d'accès au bucket",
   "Chunk size": "Chunk size",
   "The size of each chunk sent": "La taille de chaque chunk envoyé",
   "Use V4 auth.": "Utiliser l'auth. V4",
@@ -358,9 +358,9 @@
   "Small desc.": "Desc. courte",
   "Current version": "Version courante",
   "Testable": "Testable",
-  "Categories": "Categories",
+  "Categories": "Catégories",
   "Subscription": "Souscription",
-  "Authorized teams": "Équipes authorizées",
+  "Authorized teams": "Équipes autorisées",
   "Versions and tags": "Versions et tags",
   "Visibility and subscription": "Visibilité et souscription",
   "Authorizations": "Autorisations",
@@ -405,7 +405,7 @@
   "Forbidden pathes": "Chemins interdits",
   "Not found pathes": "Chemins non trouvés",
   "Billing": "Facturation",
-  "Billing every": "Facturation tout les",
+  "Billing every": "Facturation tous les",
   "Plan name": "Nom du plan",
   "Quotas": "Quotas",
   "Trial": "Essai",
@@ -428,7 +428,9 @@
   "Cost per request": "Coût par requête",
   "delete.plan.confirm": "Êtes-vous certain de vouloir supprimer ce plan ?",
   "add a new plan": "Ajouter un nouveau plan",
-  "Make default plan": "Plan par défault",
+  "Make default plan": "Plan par défaut",
+  "Make it private": "Le rendre privé",
+  "Make it public": "Le rendre public",
   "Delete plan": "Supprimer le plan",
   "Headers": "Headers",
   "Use swagger content": "Utiliser le contenu du swagger",
@@ -467,7 +469,7 @@
   "Api keys for": "Clé d'api pour",
   "team.members.title": "Membres de %s",
   "Add new member to the team ...": "Ajouter un nouveau membre...",
-  "Api keys are just visible by admins": "clés Api seulement visibles par les admin.",
+  "Api keys are just visible by admins": "Clés d'api seulement visibles par les admins",
   "Remove member": "Supprimer le membre",
   "Manage permissions": "Gérer les autorisations",
   "Find a member": "Rechercher un membre",
