FIX #1O - forbid some content-type for team asset storage - add asset replacement content-type protection - display thumbnail for svg assets - add doubleclick selection for asset modal

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -516,5 +516,8 @@
     "oops, something went wrong.": "oops, something went wrong.",
     "personal.token.empty.error": "Your personal token can't be empty",
     "remove.user.success": "user %s is successfully deleted",
-    "email.validity.error": "You have entered an invalid email address"
+    "email.validity.error": "You have entered an invalid email address",
+    "content type is not allowed": "content type is not allowed",
+    "error.replace.files.multi": "You can't replace a file with more than one",
+    "error.replace.files.content.type": "You cannot replace a file with another of a different content-type"
 }
