--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -493,7 +493,7 @@
   "tenant.created.success": "Le tenant %s a été créé avec succès",
   "Tenant updated successfully": "Le tenant a été modifié avec succès",
   "Confirm password": "Confirmation mot de passe",
-  "Create account": "Creation d'un compte",
+  "Create account": "Création d'un compte",
   "account.creation.error": "Votre demande de création de compte n'est plus valide (elle n'est valable que pendant 15 minutes). S'il vous plaît crée une nouvelle demande.",
   "create.account.done": "Vous recevrez un courriel à l'adresse %s pour terminer le processus de création de votre compte. Vous aurez 15 minutes pour terminer le processus de création de votre compte.",
   "Missing informations ...": "Informations manquantes ...",
@@ -517,6 +517,6 @@
   "personal.token.empty.error": "Votre jeton perso. ne peut être vide",
   "remove.user.success": "l'utilisateur %s à été correctement supprimé",
   "content type is not allowed": "le type de contenu n'est pas autorisé",
-  "email.validity.error": "Vous avez fournis une adresse courriel invalide",
+  "email.validity.error": "Vous avez fourni un courriel invalide",
   "error.replace.files.content.type": "Vous ne pouvez pas remplacer un fichier par un autre de type différent"
 }
