--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -27,10 +27,10 @@
   "Your APIs center": "Votre catalogue d'APIs",
   "Daikoku description start": "Daikoku est le parfait companion d'",
   "Daikoku description end": " pour gérer la documentation de vos APIs préférées et les exposer à votre communauté de développeurs. Vous pourrez aussi publier en quelques seconde une nouvelle API",
-  "result": "resultat",
+  "result": "résultat",
   "matching": "correpondant à",
   "categorised in": "catégorisé comme",
-  "tagged": "taggé comme",
+  "tagged": "taggé(s) comme",
   "clear filter": "supprimer les filtres",
   "Search your API...": "Rechercher une API...",
   "Previous": "Précédent",
