FIX #28 - add some translation FIX #29 - add email input on reset password form FIX #30 - french translation for account creation message

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -519,5 +519,7 @@
     "email.validity.error": "You have entered an invalid email address",
     "content type is not allowed": "content type is not allowed",
     "error.replace.files.multi": "You can't replace a file with more than one",
-    "error.replace.files.content.type": "You cannot replace a file with another of a different content-type"
+    "error.replace.files.content.type": "You cannot replace a file with another of a different content-type",
+    "Email address does not exist": "Email address does not exist",
+    "login.to.tenant": "Login to %s"
 }
