--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -523,5 +523,6 @@
     "Email address does not exist": "Email address does not exist",
     "login.to.tenant": "Login to %s",
     "api.creation.title.modal": "Select the team for which to create new api",
-    "api.creation.description.modal": "You are going to create an api. For which team do you want to create it ?"
+    "api.creation.description.modal": "You are going to create an api. For which team do you want to create it ?",
+    "Set font family from asset": "Set font family from asset"
 }
