--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -523,5 +523,10 @@
   "login.to.tenant": "Se connecter à %s",
   "api.creation.title.modal": "Sélectionnez l'équipe pour laquelle créer une nouvelle API",
   "api.creation.description.modal": "Vous allez créer une nouvelle API. Pour quelle équipe voulez-vous la créer ?",
-  "Set font family from asset": "Définir la police de style depuis un asset"
+  "Set font family from asset": "Définir la police de style depuis un asset",
+  "Public": "Publique",
+  "Private": "Privée",
+  "Public With Authorizations": "Publique avec autorisation",
+  "Automatic": "Automatique",
+  "Manual": "Manuelle"
 }
