--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -22,7 +22,7 @@
     "All teams": "All teams",
     "All organizations": "All organizations",
     "settings": "settings",
-    "reset": "Reset",
+    "Reset": "Reset",
     "Logout": "Logout",
     "Your APIs center": "Your APIs center",
     "Daikoku description start": "Daikoku is the perfect",
@@ -533,5 +533,8 @@
     "team.created.success": "Team %s created successfully",
     "team.updated.success": "Team %s updated successfully",
     "user.created.success": "User %s created successfully",
-    "user.updated.success": "User %s updated successfully"
+    "user.updated.success": "User %s updated successfully",
+    "unsaved.modifications.title": "Unsaved modifications",
+    "unsaved.modifications.message": "Your have unsaved modifications, do you want to save it before continue ?",
+    "Set Color Theme from UI": "Set Color Theme from UI"
 }
