--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -536,5 +536,17 @@
     "user.updated.success": "User %s updated successfully",
     "unsaved.modifications.title": "Unsaved modifications",
     "unsaved.modifications.message": "Your have unsaved modifications, do you want to save it before continue ?",
-    "Set Color Theme from UI": "Set Color Theme from UI"
+    "Set Color Theme from UI": "Set Color Theme from UI",
+    "Otoroshi Url": "Otoroshi Url",
+    "Otoroshi Host": "Otoroshi Host",
+    "Otoroshi client id": "Otoroshi client id",
+    "Otoroshi client secret": "Otoroshi client secret",
+    "otoroshi.settings.delete.confirm": "Are you sure you want to delete those otoroshi settings ?",
+    "Otoroshi settings": "Otoroshi settings",
+    "New otoroshi settings": "New otoroshi settings",
+    "Host": "Host",
+    "Edit this settings": "Edit this settings",
+    "Delete this settings": "Delete this settings",
+    "Create new settings": "Create new settings"
+
 }
