--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -22,7 +22,7 @@
   "All teams": "Toutes les équipes",
   "All organizations": "Toutes les organisations",
   "settings": "paramètres",
-  "reset": "Réinitialiser",
+  "Reset": "Réinitialiser",
   "Logout": "Déconnexion",
   "Your APIs center": "Votre catalogue d'APIs",
   "Daikoku description start": "Daikoku est le parfait companion d'",
@@ -532,5 +532,19 @@
   "team.created.success": "L'équipe %s a été créée avec succès",
   "team.updated.success": "L'équipe %s a été modifiée avec succès",
   "user.created.success": "L'utilisateur %s a été créé avec succès",
-  "user.updated.success": "L'utilisateur %s a été modifié avec succès"
+  "user.updated.success": "L'utilisateur %s a été modifié avec succès",
+  "unsaved.modifications.title": "Modifications en cours",
+  "unsaved.modifications.message": "Vous avez des modifications en cours, voulez-vous les enregistrer avant de continuer ?",
+  "Set Color Theme from UI": "Modifier le thème de couleur depuis l'IHM",
+  "Otoroshi Url": "Otoroshi - Url",
+  "Otoroshi Host": "Otoroshi - Hôte",
+  "Otoroshi client id": "Otoroshi - client id",
+  "Otoroshi client secret": "Otoroshi - client secret",
+  "otoroshi.settings.delete.confirm": "Êtes vous certain de vouloir supprimer ces paramètres Otoroshi ?",
+  "Otoroshi settings": "Paramètres Otoroshi",
+  "New otoroshi settings": "Nouveaux paramètres Otoroshi",
+  "Host": "Hôte",
+  "Edit this settings": "Modifier les paramètres",
+  "Delete this settings": "Supprimer les paramèters",
+  "Create new settings": "Créer de nouveaux paramètres"
 }
