--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -547,6 +547,12 @@
     "Host": "Host",
     "Edit this settings": "Edit this settings",
     "Delete this settings": "Delete this settings",
-    "Create new settings": "Create new settings"
+    "Create new settings": "Create new settings",
+    "ApiKey settings": "ApiKey settings",
+    "Custom Name": "Custom Name",
+    "Rotation": "Rotation",
+    "Reset secret": "Reset Secret",
+    "help.apikey.enabled": "If this ApiKey is disabled, any call using it will fail",
+    "help.apikey.rotation": "If rotation is enabled then secret will be reseted every months"
 
 }
